--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     compileOnly('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.batch:spring-batch-test')
+    // https://mvnrepository.com/artifact/com.h2database/h2
+
+    compile group: 'com.h2database', name: 'h2', version: '1.4.197'
+
 }
